contrast fix

--- a/assets/compiled.css
+++ b/assets/compiled.css
@@ -280,6 +280,11 @@ select {
   font-family: inherit;
   font-size: inherit; /*https://stackoverflow.com/questions/6080413/why-doesnt-input-inherit-the-font-from-body*/
 }
+
+.Select-placeholder{
+  color: #000000;
+}
+
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
